fixed safari/chrome specific stretching issue in flex

--- a/projects/css/style.css
+++ b/projects/css/style.css
@@ -19,7 +19,7 @@ section{
     padding-top:20px;
     display:flex;
     justify-content: center;
-    align-content: start;
+    align-items: flex-start;
 }
 section > *{
     max-width: 50%;
